@startuml

title __P10-MIAGE-M1-MAPC-TD4's Class Diagram__\n

  namespace dispenser1 {
    class dispenser1.Demo {
    }
  }
  

  namespace dispenser1 {
    class dispenser1.DrinkDispenser {
    }
  }
  

  namespace dispenser1 {
    class dispenser1.State {
    }
  }
  

  namespace dispenser1 {
    class dispenser1.StateReadyToServe {
    }
  }
  

  namespace dispenser1 {
    class dispenser1.StateWaitingForMoney {
    }
  }
  

  namespace dispenser2 {
    class dispenser2.Demo {
    }
  }
  

  namespace dispenser2 {
    class dispenser2.DrinkDispenser {
    }
  }
  

  namespace dispenser2 {
    class dispenser2.State {
    }
  }
  

  namespace dispenser2 {
    class dispenser2.StateReadyToServe {
    }
  }
  

  namespace dispenser2 {
    class dispenser2.StateWaitingForMoney {
    }
  }
  

  namespace war {
    interface war.Attack {
    }
  }
  

  namespace war {
    class war.Cannon {
    }
  }
  

  namespace war {
    class war.Demo {
    }
  }
  

  namespace war {
    class war.Drive {
    }
  }
  

  namespace war {
    class war.Firegun {
    }
  }
  

  namespace war {
    class war.Fly {
    }
  }
  

  namespace war {
    class war.Missile {
    }
  }
  

  namespace war {
    interface war.Movements {
    }
  }
  

  namespace war {
    class war.Run {
    }
  }
  

  namespace war {
    class war.SMG {
    }
  }
  

  namespace war {
    class war.Unit {
    }
  }
  

  dispenser1.DrinkDispenser o-- dispenser1.State : state
  dispenser1.StateReadyToServe -up-|> dispenser1.State
  dispenser1.StateWaitingForMoney -up-|> dispenser1.State
  dispenser2.DrinkDispenser o-- dispenser2.State : state
  dispenser2.StateReadyToServe -up-|> dispenser2.State
  dispenser2.StateWaitingForMoney -up-|> dispenser2.State
  war.Cannon .up.|> war.Attack
  war.Drive .up.|> war.Movements
  war.Firegun .up.|> war.Attack
  war.Fly .up.|> war.Movements
  war.Missile .up.|> war.Attack
  war.Run .up.|> war.Movements
  war.SMG .up.|> war.Attack
  war.Unit o-- war.Movements : moves
  war.Unit o-- war.Attack : stuff


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
